Added TimeLog CRUD for admin and remove manager-project association

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -26,9 +26,7 @@
       <table class="table table-hover">
         <thead class="text-primary">
           <th>Name</th>
-          <th>By</th>
-          <th>Edit</th>
-          <th>Delete</th>
+          <th>Earnings</th>
         </thead>
         <tbody>
           <% @client.projects.each do |project| %>
@@ -37,17 +35,7 @@
                 <%= link_to titleize(project.name), project_path(project), { rel: "tooltip", title: "View", class: "btn btn-primary btn-link btn-sm" } %>
               </td>
               <td>
-                <%= link_to titleize(project.client.name), client_path(project.client), { rel: "tooltip", title: "Profile", class: "btn btn-primary btn-link btn-sm" } %>
-              </td>
-              <td>
-                <%= link_to edit_project_path(project), { rel: "tooltip", title: "Edit Project", class: "btn btn-primary btn-link btn-sm" } do %>
-                  <i class="material-icons">edit</i>
-                <% end %>
-              </td>
-              <td>
-                <%= link_to project_path(project), { rel: "tooltip", title: "Delete Project", class: "btn btn-primary btn-link btn-sm" , method: :delete, data: { confirm: 'Are you sure?' } }  do %>
-                  <i class="material-icons">delete</i>
-                <% end %>
+                <%= total_project_earning(project) %>
               </td>
             </tr>
           <% end %>
