--- a/app/views/admin/payments/_payment.html.erb
+++ b/app/views/admin/payments/_payment.html.erb
@@ -1,10 +1,31 @@
-<%= form_for [:admin, @project, @project.payments.build] do |f| %>
-  <div class="col-md-12">
-    <div class="form-group">
-      <%= f.label :amount, class: "bmd-label-floating" %>
-      <%= f.number_field :amount, class: "form-control" %>
+<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+  <div class="card">
+    <div class="card-header card-header-tabs card-header-primary">
+      <h4 class="card-title">Payments</h4>
+      <p class="card-category">A list of payments made against <%= project.name %></p>
     </div>
-
-    <%= f.submit class: "btn btn-primary pull-right" %>
+    <div class="card-body table-responsive">
+      <table class="table table-hover">
+        <thead class="text-primary">
+          <th>Amount</th>
+          <th>Delete</th>
+        </thead>
+        <tbody>
+          <% project.payments.each do |payment| %>
+            <tr>
+              <td>
+                <%= best_in_place [:admin, project, payment], :amount, as: :input, html_attrs: { type: :number }, inner_class: "form-control", rel: "tooltip", title: "Click to Edit", class: "btn btn-primary btn-link btn-sm" %>
+              </td>
+              <td>
+                <%= link_to admin_project_payment_path(project, payment), { rel: "tooltip", title: "Delete Payment", class: "btn btn-primary btn-link btn-sm" , method: :delete, data: { confirm: 'Are you sure?' } }  do %>
+                  <i class="material-icons">delete</i>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <%= render 'admin/payments/form' %>
   </div>
-<% end %>
+</div>
