--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -10,36 +10,9 @@
     </div>
   </div>
 
-  <div class="col-lg-6 col-md-6">
-    <div class="card">
-      <div class="card-header card-header-tabs card-header-primary">
-        <h4 class="card-title">Payments</h4>
-        <p class="card-category">A list of payments made against <%= @project.name %></p>
-      </div>
-      <div class="card-body table-responsive">
-        <table class="table table-hover">
-          <thead class="text-primary">
-            <th>Amount</th>
-            <th>Delete</th>
-          </thead>
-          <tbody>
-            <% @project.payments.each do |payment| %>
-              <tr>
-                <td>
-                  <%= best_in_place [:admin, @project, payment], :amount, as: :input, html_attrs: { type: :number }, inner_class: "form-control", rel: "tooltip", title: "Click to Edit", class: "btn btn-primary btn-link btn-sm" %>
-                </td>
-                <td>
-                  <%= link_to admin_project_payment_path(@project, payment), { rel: "tooltip", title: "Delete Payment", class: "btn btn-primary btn-link btn-sm" , method: :delete, data: { confirm: 'Are you sure?' } }  do %>
-                    <i class="material-icons">delete</i>
-                  <% end %>
-                </td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
-      <%= render 'admin/payments/payment' %>
-    </div>
+  <div class="row">
+    <%= render 'admin/payments/payment', project: @project %>
+    <%= render 'admin/time_logs/time_log', project: @project %>
   </div>
 
   <div class="link">
