--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,13 +15,23 @@
         </div>
       </form>
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <%= link_to destroy_user_session_path, { class: "nav-link", method: :delete } do %>
-            <i class="material-icons">logout</i>
+        <li class="nav-item dropdown">
+          <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="material-icons">person</i>
             <p class="d-lg-none d-md-block">
-              Logout
+              User
             </p>
-          <% end %>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+            <%= link_to edit_user_registration_path, { class: "dropdown-item" } do %>
+              <i class="material-icons">person</i>
+              Profile
+            <% end %>
+            <%= link_to destroy_user_session_path, { class: "dropdown-item", method: :delete } do %>
+              <i class="material-icons">logout</i>
+              Logout
+            <% end %>
+          </div>
         </li>
       </ul>
     </div>
