--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,10 +1,7 @@
-<div class="col-md-2"></div>
-
-<div class="col-md-8">
+<div class="offset-md-2 col-md-8">
   <div class="card">
     <div class="card-header card-header-primary">
       <h4 class="card-title">Edit User</h4>
-      <p class="card-category">Change role, password and account status of the user!</p>
     </div>
     <div class="card-body">
       <%= render 'form' %>
