--- a/app/views/admin/payments/_payment.html.erb
+++ b/app/views/admin/payments/_payment.html.erb
@@ -2,7 +2,6 @@
   <div class="card">
     <div class="card-header card-header-tabs card-header-primary">
       <h4 class="card-title">Payments</h4>
-      <p class="card-category">A list of payments made against <%= project.name %></p>
     </div>
     <div class="card-body table-responsive">
       <table class="table table-hover">
@@ -14,7 +13,7 @@
           <% project.payments.each do |payment| %>
             <tr>
               <td>
-                <%= best_in_place [:admin, project, payment], :amount, as: :input, html_attrs: { type: :number }, inner_class: "form-control", rel: "tooltip", title: "Click to Edit", class: "btn btn-primary btn-link btn-sm" %>
+                <%= best_in_place [:admin, project, payment], :amount, as: :input, html_attrs: { type: :number }, inner_class: "form-control", class: "btn btn-primary btn-link btn-sm" %>
               </td>
               <td>
                 <%= link_to admin_project_payment_path(project, payment), { rel: "tooltip", title: "Delete Payment", class: "btn btn-primary btn-link btn-sm", method: :delete, data: { confirm: 'Are you sure?' } }  do %>
