--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,7 +2,6 @@
   <div class="card">
     <div class="card-header card-header-tabs card-header-primary">
       <h4 class="card-title">Users Listing</h4>
-      <p class="card-category">List of all the users present in the system</p>
     </div>
     <div class="card-body table-responsive">
       <table class="table table-hover">
@@ -18,7 +17,7 @@
           <% @users.each do |user| %>
             <tr>
               <td>
-                <%= link_to titleize(user.username), admin_user_path(user), { rel: "tooltip", title: "Profile", class: "btn btn-primary btn-link btn-sm" } %>
+                <%= link_to titleize(user.username), admin_user_path(user) %>
               </td>
               <td><%= user.email %></td>
               <td><%= titleize(user.role) %></td>
@@ -26,7 +25,7 @@
                 <%= link_to user_status(user.active), toggle_active_admin_user_path(user), { method: :patch, rel: "tooltip", title: "Toogle Active", class: "btn btn-primary btn-link btn-sm" } %>
               </td>
               <td>
-                <%= link_to edit_admin_user_path(user), { rel: "tooltip", title: "Edit User", class: "btn btn-primary btn-link btn-sm" } do %>
+                <%= link_to edit_admin_user_path(user) do %>
                   <i class="material-icons">edit</i>
                 <% end %>
               </td>
