--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,23 +1,20 @@
-<div class="col-md-2"></div>
+<div class="offset-md-2 col-md-8">
+  <div class="card card-profile">
+    <div class="card-avatar">
+       <%= image_tag "faces/marc.jpg" %> />
+    </div>
+    <div class="card-body">
+      <h4 class="card-title"><%= titleize(@user.username) %></h4>
+      <h6 class="card-title"><%= @user.email %></h6>
+      <p class="card-description">
 
-<div class="col-md-8">
-<div class="card card-profile">
-  <div class="card-avatar">
-     <%= image_tag "faces/marc.jpg" %> />
-  </div>
-  <div class="card-body">
-    <h4 class="card-title"><%= titleize(@user.username) %></h4>
-    <h6 class="card-category text-gray"><%= titleize(@user.role) %></h6>
-    <h6 class="card-title"><%= @user.email %></h6>
-    <p class="card-description">
-
-    </p>
-    <%= link_to user_status(@user.active), toggle_active_admin_user_path(@user), method: :patch, class: "btn btn-primary btn-round" %>
-    <%= link_to "Edit", edit_admin_user_path(@user), class: "btn btn-primary btn-round" %>
-    <%= link_to "Delete", admin_user_path(@user), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-round" %>
-    <div class="link">
-      <%= link_to 'Back', admin_users_path, class: "btn btn-primary" %>
+      </p>
+      <%= link_to user_status(@user.active), toggle_active_admin_user_path(@user), method: :patch, class: "btn btn-primary btn-round" %>
+      <%= link_to "Edit", edit_admin_user_path(@user), class: "btn btn-primary btn-round" %>
+      <%= link_to "Delete", admin_user_path(@user), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-round" %>
+      <div class="link">
+        <%= link_to 'Back', admin_users_path, class: "btn btn-primary" %>
+      </div>
     </div>
   </div>
-</div>
 </div>
