--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,26 +1,23 @@
-<div class="col-md-2"></div>
+<div class="offset-md-2 col-md-8">
+  <div class="card card-profile">
+    <div class="card-avatar">
+       <%= image_tag "faces/marc.jpg" %> />
+    </div>
+    <div class="card-body">
+      <h4 class="card-title"><%= titleize(@client.name) %></h4>
+      <p class="card-description">
 
-<div class="col-md-8">
-<div class="card card-profile">
-  <div class="card-avatar">
-     <%= image_tag "faces/marc.jpg" %> />
+      </p>
+      <%= link_to "Edit", edit_client_path(@client), class: "btn btn-primary btn-round" %>
+      <%= link_to "Delete", client_path(@client), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-round" %>
+    </div>
   </div>
-  <div class="card-body">
-    <h4 class="card-title"><%= titleize(@client.name) %></h4>
-    <p class="card-description">
-
-    </p>
-    <%= link_to "Edit", edit_client_path(@client), class: "btn btn-primary btn-round" %>
-    <%= link_to "Delete", client_path(@client), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-round" %>
-  </div>
-</div>
 </div>
 
 <div class="col-lg-12 col-md-12">
   <div class="card">
     <div class="card-header card-header-tabs card-header-primary">
       <h4 class="card-title">Projects</h4>
-      <p class="card-category">List of all the Projects from <%= @client.name %></p>
     </div>
     <div class="card-body table-responsive">
       <table class="table table-hover">
@@ -32,10 +29,10 @@
           <% @client.projects.each do |project| %>
             <tr>
               <td>
-                <%= link_to titleize(project.name), project_path(project), { rel: "tooltip", title: "View", class: "btn btn-primary btn-link btn-sm" } %>
+                <%= link_to titleize(project.name), project_path(project) %>
               </td>
               <td>
-                <%= total_project_earning(project) %>
+                <%= project.total_earnings %>
               </td>
             </tr>
           <% end %>
