--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,12 +1,7 @@
-
-
-<div class="col-md-2"></div>
-
-<div class="col-md-8">
+<div class="offset-md-2 col-md-8">
   <div class="card">
     <div class="card-header card-header-primary">
       <h4 class="card-title">Edit Profile</h4>
-      <p class="card-category">Change Everything related to your profile!</p>
     </div>
     <div class="card-body">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
