--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [project, payment] do |f| %>
+<%= form_for [project, payment], remote: true do |f| %>
   <div class="col-md-12">
     <div class="form-group">
       <%= f.label :amount, class: "bmd-label-floating" %>
