--- a/app/views/payments/_payment.html.erb
+++ b/app/views/payments/_payment.html.erb
@@ -2,7 +2,6 @@
   <div class="card">
     <div class="card-header card-header-tabs card-header-primary">
       <h4 class="card-title">Payments</h4>
-      <p class="card-category">A list of payments made against <%= project.name %></p>
     </div>
     <div class="card-body table-responsive">
       <table class="table table-hover">
@@ -16,7 +15,7 @@
           <% project.payments.each do |payment| %>
             <tr>
               <td>
-                <%= best_in_place [project, payment], :amount, as: :input, html_attrs: { type: :number }, inner_class: "form-control", rel: "tooltip", title: "Click to Edit", class: "btn btn-primary btn-link btn-sm" %>
+                <%= best_in_place [project, payment], :amount, as: :input, html_attrs: { type: :number }, inner_class: "form-control", class: "btn btn-primary btn-link btn-sm" %>
               </td>
               <% if current_user.manager? %>
                 <td>
