--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @project do |f| %>
+<%= form_for project do |f| %>
   <div class="row">
     <div class="col-md-12">
       <div class="form-group">
