--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,13 +1,10 @@
-<div class="col-md-2"></div>
-
-<div class="col-md-8">
+<div class="offset-md-2 col-md-8">
   <div class="card">
     <div class="card-header card-header-primary">
       <h4 class="card-title">Add New Project</h4>
-      <p class="card-category">Add new Project and its details in the system!</p>
     </div>
     <div class="card-body">
-      <%= render 'form' %>
+      <%= render 'form', project: @project %>
     </div>
   </div>
 </div>
