Creation of payments and timelogs through ajax with validation messages

--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -3,6 +3,7 @@
     <div class="form-group">
       <%= f.label :amount, class: "bmd-label-floating" %>
       <%= f.number_field :amount, class: "form-control" %>
+      <span id= "amountBlock" class="help-block"></span>
     </div>
 
     <%= f.submit class: "btn btn-primary pull-right" %>
