--- a/app/views/time_logs/_form.html.erb
+++ b/app/views/time_logs/_form.html.erb
@@ -1,8 +1,9 @@
-<%= form_for [project, time_log] do |f| %>
+<%= form_for [project, time_log], remote: true do |f| %>
   <div class="col-md-12">
     <div class="form-group">
       <%= f.label :hours, class: "bmd-label-floating" %>
       <%= f.number_field :hours, class: "form-control" %>
+      <span id= "hoursBlock" class="help-block"></span>
     </div>
 
     <%= f.submit class: "btn btn-primary pull-right" %>
