--- a/app/views/admin/clients/_form.html.erb
+++ b/app/views/admin/clients/_form.html.erb
@@ -1,9 +1,10 @@
 <%= form_for [:admin, @client] do |f| %>
   <div class="row">
     <div class="col-md-12">
-      <div class="form-group">
+      <div class="<%= error_class(@client, :name) %>">
         <%= f.label :name, class: "bmd-label-floating" %>
         <%= f.text_field :name, class: "form-control" %>
+        <%= errors_div @client, :name %>
       </div>
     </div>
   </div>
