--- a/app/views/admin/clients/show.html.erb
+++ b/app/views/admin/clients/show.html.erb
@@ -15,6 +15,7 @@
 </div>
 
 <div class="col-lg-12 col-md-12">
+  <%= render 'shared/flash' %>
   <div class="card">
     <div class="card-header card-header-tabs card-header-primary">
       <h4 class="card-title">Projects</h4>
