--- a/app/views/admin/payments/create.js.erb
+++ b/app/views/admin/payments/create.js.erb
@@ -8,7 +8,7 @@ $(".notice").remove();
   <% end %>
 <% else %>
   $('.flash').html("<%= j render 'shared/flash', flash: flash %>");
-  $(".payments tbody").append('<%=j render "payments/payment", project: @project, payment: @payment %>')
+  $(".payments tbody").append('<%=j render "admin/payments/payment", project: @project, payment: @payment %>')
   $("#PaymentModal").modal("toggle");
   $("#PaymentModal input").each(function (){
     $(this).val("");
