--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -1,9 +1,10 @@
-<%= form_for [:admin, @project] do |f| %>
+<%= form_for [:admin, project] do |f| %>
   <div class="row">
     <div class="col-md-12">
-      <div class="form-group">
+      <div class="<%= error_class project, :name %>">
         <%= f.label :name, class: "bmd-label-floating" %>
         <%= f.text_field :name, class: "form-control" %>
+        <%= errors_div project, :name %>
       </div>
     </div>
   </div>
