--- a/app/views/admin/projects/edit.html.erb
+++ b/app/views/admin/projects/edit.html.erb
@@ -4,7 +4,7 @@
       <h4 class="card-title">Edit Project</h4>
     </div>
     <div class="card-body">
-      <%= render 'form' %>
+      <%= render 'form', project: @project %>
     </div>
   </div>
 </div>
