--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -10,9 +10,11 @@
     </div>
   </div>
 
+  <%= render 'shared/flash' %>
+
   <div class="row">
-    <%= render 'admin/payments/payment', project: @project %>
-    <%= render 'admin/time_logs/time_log', project: @project %>
+    <%= render 'admin/payments/payments', project: @project %>
+    <%= render 'admin/time_logs/time_logs', project: @project %>
   </div>
 
   <div class="link">
