--- a/app/views/admin/time_logs/_time_logs.html.erb
+++ b/app/views/admin/time_logs/_time_logs.html.erb
@@ -17,17 +17,17 @@
           <% project.time_logs.each do |time_log| %>
             <tr>
               <td>
-                <%= time_log.user.username %>
+                <%= best_in_place [:admin, project, time_log], :user_id, as: :select, collection: users_array, html_attrs: { type: :number }, inner_class: "form-control", class: "btn btn-primary btn-link btn-sm" %>
               </td>
               <td>
                 <div class="dropdown">
-                  <%= best_in_place_if authenticate_user(time_log), [project, time_log], :hours, as: :input, html_attrs: { type: :number }, aria: { haspopup:"true", expanded: "false" }, data: { toggle: "dropdown" }, id: "navbarDropdownMenuLink", inner_class: "form-control", class: "btn btn-primary btn-link btn-sm", activator: "#activator-#{time_log.id}" %>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                    <%= link_to "#", { class: "dropdown-item", id:"activator-#{time_log.id}" } do %>
+                  <%= best_in_place [:admin, project, time_log], :hours, as: :input, html_attrs: { type: :number }, aria: { haspopup:"true", expanded: "true" }, data: { toggle: "dropdown" }, id: "navbarDropdownMenuLink", inner_class: "form-control", class: "btn btn-primary btn-link btn-sm", activator: "#activator-#{time_log.id}" %>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <%= link_to "#", { class: "dropdown-item edit", id:"activator-#{time_log.id}" } do %>
                       <i class="material-icons">edit</i>
                       Edit Log
                     <% end %>
-                    <%= link_to project_time_log_path(project, time_log), { class: "dropdown-item", method: :delete } do %>
+                    <%= link_to admin_project_time_log_path(project, time_log), { class: "dropdown-item", method: :delete } do %>
                       <i class="material-icons">delete</i>
                       Delete Log
                     <% end %>
@@ -51,7 +51,7 @@
           </div>
 
           <div class="modal-body">
-            <%= render 'time_logs/form', project: project, time_log: project.time_logs.build %>
+            <%= render 'admin/time_logs/form', project: project, time_log: project.time_logs.build %>
           </div>
 
           <div class="container">
