--- a/app/views/admin/time_logs/create.js.erb
+++ b/app/views/admin/time_logs/create.js.erb
@@ -8,7 +8,7 @@ $(".notice").remove();
   <% end %>
 <% else %>
   $('.flash').html("<%= j render 'shared/flash', flash: flash %>");
-  $(".time_logs tbody").append('<%=j render "time_logs/time_log", project: @project, time_log: @time_log %>')
+  $(".time_logs tbody").append('<%=j render "admin/time_logs/time_log", project: @project, time_log: @time_log %>')
   $("#TimeLogModal").modal("toggle");
   $("#TimeLogModal input").each(function (){
     $(this).val("");
