--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,36 +1,40 @@
 <%= form_for [:admin, @user] do |f| %>
   <div class="row">
     <div class="col-md-12">
-      <div class="form-group">
+      <div class="<%= error_class @user, :username %>">
         <%= f.label :username, class: "bmd-label-floating" %>
         <%= f.text_field :username, class: "form-control" %>
+        <%= errors_div @user, :username %>
       </div>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-12">
-      <div class="form-group">
+      <div class="<%= error_class @user, :email %>">
         <%= f.label :email, class: "bmd-label-floating" %>
         <%= f.email_field :email, class: "form-control" %>
+        <%= errors_div @user, :email %>
       </div>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-12">
-      <div class="form-group">
+      <div class="<%= error_class @user, :password %>">
         <%= f.label :password, class: "bmd-label-floating" %>
         <%= f.password_field :password, class: "form-control" %>
+        <%= errors_div @user, :password %>
       </div>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-12">
-      <div class="form-group">
+      <div class="<%= error_class @user, :password_confirmation %>">
         <%= f.label :password_confirmation, class: "bmd-label-floating" %>
         <%= f.password_field :password_confirmation, class: "form-control" %>
+        <%= errors_div @user, :password_confirmation %>
       </div>
     </div>
   </div>
