--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,5 @@
 <div class="col-lg-12 col-md-12">
+  <%= render 'shared/flash' %>
   <div class="card">
     <div class="card-header card-header-tabs card-header-primary">
       <h4 class="card-title">Users Listing</h4>
