--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -9,6 +9,9 @@
       <p class="card-description">
 
       </p>
+
+      <%= render 'shared/flash' %>
+
       <%= link_to user_status(@user.active), toggle_active_admin_user_path(@user), method: :patch, class: "btn btn-primary btn-round" %>
       <%= link_to "Edit", edit_admin_user_path(@user), class: "btn btn-primary btn-round" %>
       <%= link_to "Delete", admin_user_path(@user), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary btn-round" %>
