--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -3,6 +3,7 @@
    <% alert_class = case key
                     when 'notice' then "success"
                     when 'alert' then "danger"
+                    when 'error' then "danger"
                     else key
                     end %>
    <%= content_tag :div, class: "alert alert-#{alert_class}" do %>
