Displayed errors messages for validations through helpers

--- a/app/views/admin/projects/new.html.erb
+++ b/app/views/admin/projects/new.html.erb
@@ -7,7 +7,7 @@
       <p class="card-category">Add new Project and its details in the system!</p>
     </div>
     <div class="card-body">
-      <%= render 'form' %>
+      <%= render 'form', project: @project %>
     </div>
   </div>
 </div>
