--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -16,6 +16,9 @@
     <%= render 'time_logs/time_logs', project: @project %>
   </div>
 
+  <div class="row">
+    <%= render 'comments/comments', resource: @project %>
+  </div>
   <div class="link">
     <%= link_to 'Back', projects_path, class: "btn btn-primary" %>
   </div>
