--- a/app/views/time_logs/_time_logs.html.erb
+++ b/app/views/time_logs/_time_logs.html.erb
@@ -21,8 +21,8 @@
               </td>
               <td>
                 <div class="dropdown">
-                  <%= best_in_place_if authenticate_user(time_log), [project, time_log], :hours, as: :input, html_attrs: { type: :number }, aria: { haspopup:"true", expanded: "false" }, data: { toggle: "dropdown" }, id: "navbarDropdownMenuLink", inner_class: "form-control", class: "btn btn-primary btn-link btn-sm", activator: "#activator-#{time_log.id}" %>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                  <%= best_in_place_if authenticate_user(time_log), [project, time_log], :hours, as: :input, html_attrs: { type: :number }, aria: { haspopup:"true", expanded: "false" }, data: { toggle: "dropdown" }, inner_class: "form-control", class: "btn btn-primary btn-link btn-sm", activator: "#activator-#{time_log.id}" %>
+                  <div class="dropdown-menu dropdown-menu-right">
                     <%= link_to "#", { class: "dropdown-item", id:"activator-#{time_log.id}" } do %>
                       <i class="material-icons">edit</i>
                       Edit Log
