--- a/app/views/time_logs/create.js.erb
+++ b/app/views/time_logs/create.js.erb
@@ -3,11 +3,11 @@ $(".notice").remove();
 
 <% if @time_log.errors.any? %>
   <% if @time_log.errors[:hours].any? %>
-    $("#hoursBlock").append('<%=j render "shared/errors", resource: @time_log, field: :hours %>');
+    $("#hoursBlock").append('<%= errors_div @time_log, :hours %>');
     $("#hoursBlock").closest(".form-group").addClass("has-danger");
   <% end %>
 <% else %>
-  $('.flash').html("<%= j render 'shared/flash', flash: flash %>");
+  <%= render 'shared/notification', flash: flash %>
   $(".time_logs tbody").append('<%=j render "time_logs/time_log", project: @project, time_log: @time_log %>')
   $("#TimeLogModal").modal("toggle");
   $("#TimeLogModal input").each(function (){
