Added Attachments for users and clients

--- a/app/views/admin/comments/_comments.html.erb
+++ b/app/views/admin/comments/_comments.html.erb
@@ -9,7 +9,7 @@
           <div class="card">
             <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 card-header">
-                <%= image_tag "faces/marc.jpg", height: 50, width: 50, class: "rounded pull-left" %>
+                <%= image_tag comment.user.attachment.avatar.url, height: 50, width: 50, class: "rounded pull-left" %>
                 <div class="container">
                   <div class="row">
                     <div class="col-md-12">
