--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,17 @@
       <h4 class="card-title">Edit Profile</h4>
     </div>
     <div class="card-body">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
+        <% if resource.errors.any? %>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="alert alert-danger">
+                <%= devise_error_messages! %>
+              </div>
+            </div>
+          </div>
+        <% end %>
+
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
@@ -49,6 +59,17 @@
             </div>
           </div>
         </div>
+
+        <%= f.fields_for :attachment do |picture| %>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <%= picture.label :avatar, class: "bmd-label-floating" %>
+                <%= picture.file_field :avatar, class: "form-control" %>
+              </div>
+            </div>
+          </div>
+        <% end %>
 
         <%= f.submit "Update", class: "btn btn-primary col-md-12" %>
 
