--- a/app/views/admin/clients/_form.html.erb
+++ b/app/views/admin/clients/_form.html.erb
@@ -9,6 +9,20 @@
     </div>
   </div>
 
+  <% @client.build_attachment if @client.new_record? %>
+
+  <%= f.fields_for :attachment do |picture| %>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="<%= attachment_error_class @client, [:attachment, :"attachment.avatar_content_type", :"attachment.avatar"] %>">
+          <%= picture.label :avatar, class: "bmd-label-floating" %>
+          <%= picture.file_field :avatar, class: "form-control" %>
+          <%= attachment_errors_div @client, [:attachment, :"attachment.avatar_content_type", :"attachment.avatar"] %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+
   <%= f.submit class: "btn btn-primary col-md-12" %>
 
   <div class="link">
