--- a/app/views/admin/payments/_payments.html.erb
+++ b/app/views/admin/payments/_payments.html.erb
@@ -2,7 +2,7 @@
   <div class="card">
     <div class="card-header card-header-tabs card-header-primary">
       <h4 class="card-title">Payments
-        <a class="pull-right" href="#" data-toggle="modal" data-target="#PaymentModal">
+        <a class="pull-right" href="#" data-toggle="modal" data-target="#payment_modal">
           <i class="material-icons">add</i>
         </a>
       </h4>
@@ -29,7 +29,7 @@
         </tbody>
       </table>
     </div>
-    <div class="modal" id="PaymentModal">
+    <div class="modal" id="payment_modal">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
