--- a/app/views/admin/payments/create.js.erb
+++ b/app/views/admin/payments/create.js.erb
@@ -1,16 +1,14 @@
 $(".form-group").removeClass("has-danger");
 $(".notice").remove();
 
-<% if @payment.errors.any? %>
-  <% if @payment.errors[:amount].any? %>
-    $("#amountBlock").append('<%= errors_div @payment, :amount %>');
-    $("#amountBlock").closest(".form-group").addClass("has-danger");
-  <% end %>
+<% if @payment.errors[:amount].any? %>
+  $("#amount_block").append('<%= errors_div @payment, :amount %>');
+  $("#amount_block").closest(".form-group").addClass("has-danger");
 <% else %>
   <%= render 'shared/notification', flash: flash %>
   $(".payments tbody").append('<%=j render "admin/payments/payment", project: @project, payment: @payment %>')
-  $("#PaymentModal").modal("toggle");
-  $("#PaymentModal input").each(function (){
+  $("#payment_modal").modal("toggle");
+  $("#payment_modal input").each(function (){
     $(this).val("");
   })
 <% end %>
