--- a/app/views/admin/time_logs/_form.html.erb
+++ b/app/views/admin/time_logs/_form.html.erb
@@ -10,7 +10,7 @@
     <div class="form-group">
       <%= f.label :hours, class: "bmd-label-floating" %>
       <%= f.number_field :hours, class: "form-control" %>
-      <span id="hoursBlock" class="help-block"></span>
+      <span id="hours_block" class="help-block"></span>
     </div>
 
   <%= f.submit class: "btn btn-primary pull-right" %>
