--- a/app/views/admin/time_logs/_time_logs.html.erb
+++ b/app/views/admin/time_logs/_time_logs.html.erb
@@ -2,7 +2,7 @@
   <div class="card">
     <div class="card-header card-header-tabs card-header-primary">
       <h4 class="card-title">Time Logs
-        <a class="pull-right" href="#" data-toggle="modal" data-target="#TimeLogModal">
+        <a class="pull-right" href="#" data-toggle="modal" data-target="#time_log_modal">
           <i class="material-icons">add</i>
         </a>
       </h4>
@@ -40,7 +40,7 @@
       </table>
     </div>
 
-    <div class="modal" id="TimeLogModal">
+    <div class="modal" id="time_log_modal">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
