--- a/app/views/admin/time_logs/create.js.erb
+++ b/app/views/admin/time_logs/create.js.erb
@@ -1,16 +1,14 @@
 $(".form-group").removeClass("has-danger");
 $(".notice").remove();
 
-<% if @time_log.errors.any? %>
-  <% if @time_log.errors[:hours].any? %>
-    $("#hoursBlock").append('<%= errors_div @time_log, :hours %>');
-    $("#hoursBlock").closest(".form-group").addClass("has-danger");
-  <% end %>
+<% if @time_log.errors[:hours].any? %>
+  $("#hours_block").append('<%= errors_div @time_log, :hours %>');
+  $("#hours_block").closest(".form-group").addClass("has-danger");
 <% else %>
   <%= render 'shared/notification', flash: flash %>
   $(".time_logs tbody").append('<%=j render "admin/time_logs/time_log", project: @project, time_log: @time_log %>')
-  $("#TimeLogModal").modal("toggle");
-  $("#TimeLogModal input").each(function (){
+  $("#time_log_modal").modal("toggle");
+  $("#time_log_modal input").each(function (){
     $(this).val("");
   })
 <% end %>
