--- a/app/views/admin/comments/_form.html.erb
+++ b/app/views/admin/comments/_form.html.erb
@@ -4,7 +4,7 @@
       <div class="form-group">
         <%= f.label :leave_a_comment, class: "bmd-label-floating" %>
         <%= f.text_area :body, class: "form-control" %>
-        <span id="bodyBlock" class="help-block"></span>
+        <span id="body_block" class="help-block"></span>
       </div>
     </div>
   </div>
