--- a/app/views/admin/payments/create.js.erb
+++ b/app/views/admin/payments/create.js.erb
@@ -5,7 +5,7 @@ $(".notice").remove();
   $("#amount_block").append('<%= errors_div @payment, :amount %>');
   $("#amount_block").closest(".form-group").addClass("has-danger");
 <% else %>
-  <%= render 'shared/notification', flash: flash %>
+  showNotification('success', 'Payment was created successfully.', 'done')
   $(".payments tbody").append('<%=j render "admin/payments/payment", project: @project, payment: @payment %>')
   $("#payment_modal").modal("toggle");
   $("#payment_modal input").each(function (){
