--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @client do |f| %>
   <div class="row">
     <div class="col-md-12">
-      <div class="<%= error_class @client, :name %>">
+      <div class="form-group <%= error_class @client, :name %>">
         <%= f.label :name, class: "bmd-label-floating" %>
         <%= f.text_field :name, class: "form-control" %>
         <%= errors_div @client, :name %>
@@ -9,12 +9,10 @@
     </div>
   </div>
 
-  <% @client.build_attachment if @client.new_record? %>
-
-  <%= f.fields_for :attachment do |picture| %>
+  <%= f.fields_for :attachment, build_attachment_association(@client) do |picture| %>
     <div class="row">
       <div class="col-md-12">
-        <div class="<%= attachment_error_class @client, [:attachment, :"attachment.avatar_content_type", :"attachment.avatar"] %>">
+        <div class="form-group <%= attachment_error_class @client, [:attachment, :"attachment.avatar_content_type", :"attachment.avatar"] %>">
           <%= picture.label :avatar, class: "bmd-label-floating" %>
           <%= picture.file_field :avatar, class: "form-control" %>
           <%= attachment_errors_div @client, [:attachment, :"attachment.avatar_content_type", :"attachment.avatar"] %>
