--- a/app/views/time_logs/create.js.erb
+++ b/app/views/time_logs/create.js.erb
@@ -5,7 +5,7 @@ $(".notice").remove();
   $("#hours_block").append('<%= errors_div @time_log, :hours %>');
   $("#hours_block").closest(".form-group").addClass("has-danger");
 <% else %>
-  <%= render 'shared/notification', flash: flash %>
+  showNotification('success', 'TimeLog was created successfully.', 'done')
   $(".time_logs tbody").append('<%=j render "time_logs/time_log", project: @project, time_log: @time_log %>')
   $("#time_log_modal").modal("toggle");
   $("#time_log_modal input").each(function (){
