--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for [:admin, project] do |f| %>
   <div class="row">
     <div class="col-md-12">
-      <div class="<%= error_class project, :name %>">
+      <div class="form-group <%= error_class project, :name %>">
         <%= f.label :name, class: "bmd-label-floating" %>
         <%= f.text_field :name, class: "form-control" %>
         <%= errors_div project, :name %>
@@ -22,10 +22,22 @@
     <div class="col-md-12">
       <div class="form-group">
         <%= f.label :client %>
-        <%= f.collection_select :client_id, clients_list, :id, :name, {}, { class: "form-control" } %>
+        <%= f.collection_select :client_id, Client.all, :id, :name, {}, { class: "form-control" } %>
       </div>
     </div>
   </div>
+
+  <%= f.fields_for :attachments, @attachment do |picture| %>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="attachment_errors_class project, [:attachments, :"attachments.avatar_content_type", :"attachments.avatar"]">
+          <%= picture.label :avatar, "Attachment", class: "bmd-label-floating" %>
+          <%= picture.file_field :avatar, class: "form-control-file" %>
+          <%= attachment_errors_div project, [:attachments, :"attachments.avatar_content_type", :"attachments.avatar"] %>
+        </div>
+      </div>
+    </div>
+  <% end %>
 
   <%= f.submit class: "btn btn-primary col-md-12" %>
 
